fix: images were not showing

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .banner {
     width: 100%; /* 1920 x 347 */
     height: 347px;
-    background-image: url("/images/banner-home.png");
+    /*background-image: url("/images/banner-home.png");*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
